public/css/hanzi-graph.css
/* ... */
html {
    height: 100%;
}

body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: var(--primary-font);
    font-weight: var(--primary-font-weight);
    background-color: var(--background-color);
    color: var(--primary-font-color);
    overflow-x: hidden;
}

a {
    color: var(--primary-font-color);
    cursor: pointer;
}

input[type="search"] {
    background-color: var(--input-background-color);
    border: var(--border);
    color: var(--primary-font-color);
}

h1 {
    font-size: var(--primary-header-font-size);
    margin: 4px;
    font-family: var(--header-font-family);
}

h2 {
    font-size: var(--secondary-header-font-size);
    margin: 0;
}

h3 {
    font-size: var(--tertiary-header-font-size);
    margin: 0;
}

ul {
    list-style-type: none;
    padding: 0;
}

.header {
    display: grid;
    grid-template-columns: 50px 1fr 50px;
    height: var(--primary-header-height);
    text-align: center;
    border-bottom: var(--border);
}

.control-container {
    max-width: 1000px;
    margin: 0 auto;
    text-align: center;
    border-bottom: var(--border);
    padding-bottom: var(--controls-padding);
}

.primary-input {
    width: 80%;
    text-align: center;
    height: var(--search-input-height);
    font-size: var(--search-font-size);
    margin: 10px auto auto 0;
    padding: 0;
    text-align: center;
    border: var(--border);
    border-radius: 16px;
    box-shadow: var(--primary-input-box-shadow);
}

#walkthrough-character-set {
    font-weight: bold;
}

.primary-container {
    height: var(--primary-container-height);
}

.output-container {
    height: var(--output-container-height);
    /* TODO: should probably be grid, but that interacts strangely with cytoscape resizing */
    display: flex;
    max-width: 1300px;
    margin: 0 auto;
}

.primary-panel {
    width: 50%;
    display: flex;
    flex-direction: column;
}

.section-container {
    margin: var(--section-container-margin);
    flex-grow: 1;
    overflow: auto;
}

.sentence-container {
    width: calc(100% - 70px);
}

.clickable {
    cursor: pointer;
}

.word-header .add-button,
.word-header .check  {
    cursor: pointer;
    float: right;
    margin-right: 20px;
    margin-top: 10px;
}

#graph,
#flow-diagram-container {
    height: var(--graph-height);
}

.flow-explanation {
    margin: 10px auto;
    text-align: center;
    font-size: var(--secondary-control-font-size);
}

#examples {
    /* avoid scrollbars while animations run, otherwise unnecessary */
    overflow-x: hidden;
    margin-top: 4px;
}

.explore-tabs {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    text-align: center;
    margin: 4px auto;
    border-bottom: var(--border);
    user-select: none;
}

.explore-tab {
    cursor: pointer;
    opacity: 0.8;
}

.separator {
    display: none;
}

.explore-tab.active {
    opacity: 1;
    font-weight: 400;
}

.character-header {
    font-size: 38px;
    font-family: sans-serif;
}

.pronunciations {
    margin: 0;
}

.pronunciation {
    font-weight: 400;
    font-size: 22px;
}

.character-data {
    margin-bottom: 12px;
}

.character-data a.navigable {
    margin-right: 20px;
}

.collocations-detail {
    text-align: center;
    margin: 6px 0 0 0;
}

.collocation a:first-of-type::before,
.collocation a:last-of-type::after {
    content: '...'
}

.collocation {
    margin: 8px 0;
}

.collocation a {
    cursor: pointer;
    margin: 0 6px;
}

.collocation-root {
    text-decoration: underline;
}

.character-data h3 {
    margin: 8px 0;
}

.pinyin-relationship {
    font-size: 18px;
    font-weight: bold;
    color: var(--primary-font-color);
}

.related-characters {
    font-size: 30px;
    font-weight: var(--target-language-font-weight);
}

.nowrap {
    white-space: nowrap;
}

.tone1 {
    color: var(--tone-1-color);
}

.tone2 {
    color: var(--tone-2-color);
}

.tone3 {
    color: var(--tone-3-color);
}

.tone4 {
    color: var(--tone-4-color);
}

.tone5 {
    color: var(--neutral-tone-color);
}

.freq1 {
    color: #fc5c7d;
}

.freq2 {
    color: #ea6596;
}

.freq3 {
    color: #d56eaf;
}

.freq4 {
    color: #bb75c8;
}

.freq5 {
    color: #9b7ce1;
}

.freq6 {
    color: #6a82fb;
}

.emphasized {
    font-size: 20px;
    font-weight: bold;
}

/* TODO: font-size: larger, etc.? */
.emphasized-but-not-that-emphasized {
    font-size: 16px;
    font-weight: bold;
}

.emphasized-target {
    font-size: 24px;
    font-weight: bold;
}

.deemphasized {
    font-size: 12px;
    opacity: 0.8;
}

h2.word-header {
    font-family: var(--primary-font);
}

.word-header.active .clickable {
    border-left: 8px solid var(--accent-color);
    transition: border-left-width 0.35s, border-left-color 0.35s;
}

.word-header .clickable {
    border-left: 2px solid var(--inactive-accent-color);
    padding-left: 6px;
    padding-top: 4px;
    transition: border-left-width 0.35s, border-left-color 0.35s;
}

.explore-tab.active .separator {
    width: 60px;
    height: 4px;
    display: block;
    background: var(--accent-color);
}

.explore-tab.active .separator {
    margin: 2px auto 0 auto;
}

.expand {
    animation: expand 0.5s;
}

@keyframes expand {
    0% {
        width: 0;
    }

    100% {
        width: 60px;
    }
}

.definitions {
    margin: 6px 0;
}

.definition {
    margin: 6px 0;
    line-height: 18px;
}

.definition .tone1,
.definition .tone2,
.definition .tone3,
.definition .tone4,
.definition .tone5 {
    font-weight: bold;
    font-size: 18px;
}

.definition-part {
    margin: 0 2px 0 6px;
}

.definition-number {
    font-weight: bold;
    font-size: 18px;
}

.tags {
    margin-top: 8px;
}

.tag {
    padding: 2px;
    border-radius: 4px;
    border: var(--tag-border);
    cursor: pointer;
    margin-right: 4px;
}

.example {
    margin: 16px 0;
}

.explore-stat-header {
    margin: 8px 0 0 0;
    text-align: center;
}

.coverage-explanation {
    margin: 0 0 6px 0;
}

.coverage-explanation+svg {
    margin-top: 6px;
}
/* ... */

